@@ -1,3 +1,13 @@
+2012-12-24  Sam Weinig  <sam@webkit.org>
+
+        Fix WebKit2 asserting on launch.
+
+        * WebProcess/WebProcess.cpp:
+        (WebKit::WebProcess::WebProcess):
+        * WebProcess/WebProcess.h:
+        (WebKit::WebProcess::databaseManager):
+        (WebProcess):
+
 2012-12-24  Csaba Osztrogonác  <ossy@webkit.org>
 
         [Qt][Win] Unreviewed Xmas buildfix after r138433.
